# BembelSoccer

./: .gitignore  .gitmodules  BUILD.md  LICENSE.md  README.md  crosscompile.sh
soccer/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  docker-compose.yaml
soccer/.devcontainer/: devcontainer.json  setup  setup.cmd
soccer/cmake/: bb-shared.cmake  build-options.cmake  buildinfo.cmake  buildinfo.sh  cflags.cmake  detach_dbg_info.cmake  flatbuffers.cmake  v6toolchain.cmake
soccer/firmware/: CMakeLists.txt
soccer/firmware/backend/lola/: CMakeLists.txt
soccer/firmware/libbembelbots/: bbcommands.h  bembelbots.h  bembelbots_shm.h  button.hpp  flatbuffers_shm.hpp  monitor_shm.hpp  sit.hpp  tts.hpp
soccer/firmware/libbembelbots/config/: botnames.cpp  botnames.h  calibration.h
soccer/frontend/: CMakeLists.txt
soccer/frontend/framework/: CMakeLists.txt  simple_application.h
soccer/frontend/framework/benchmark/: benchmarking.h  timer.cpp  timer.h
soccer/frontend/framework/blackboard/: blackboard.cpp  blackboard.h  blackboardregistry.cpp  blackboardregistry.h  datacontainer.cpp  datacontainer.h  introspection.cpp  introspection.h  snapshot.h
soccer/frontend/framework/cmake/: benchmark.cmake  blackboard.cmake  common.cmake  framework.cmake  image.cmake  logger.cmake  math.cmake  network.cmake  runtime.cmake  serialize.cmake  thread.cmake  util.cmake
soccer/frontend/framework/common/: macros.h  platform.cpp  platform.h
soccer/frontend/framework/datastructures/: greenvector.h  mpsc_storage.h  queue.h
soccer/frontend/framework/filter/: exponential_moving_average.h
soccer/frontend/framework/image/: bl2.cpp  bl2.h  camimage.cpp  camimage.h  image.cpp  image.h  rgb.cpp  rgb.h  yuv422.cpp  yuv422.h
soccer/frontend/framework/ipc/: lock_free_tripple_buffer.h  shared_memory.h  time.h  tripple_buffer.h
soccer/frontend/framework/joints/: body_v6.h  definitionsBody.h  joints.hpp  special_stances.hpp
soccer/frontend/framework/logger/: backends.cpp  backends.h  logger.h  loglvl.h  logstream.cpp  logstream.h  xlogger.cpp  xlogger.h
soccer/frontend/framework/math/: angle.cpp  angle.h  constants.h  coord.cpp  coord.h  directed_coord.cpp  directed_coord.h  fast_math.h  old.cpp  old.h  point.hpp  rotation_matrices.cpp  rotation_matrices.h  utils.h
soccer/frontend/framework/network/: buffer.h  network.cpp  network.h  tcp-client.cpp  tcp-client.h  tcp-server.cpp  tcp-server.h  tcp_client.cpp  tcp_server.cpp  tcp_server.h  tcp_session.cpp  tcp_session.h  udp.cpp  udp.h
soccer/frontend/framework/rt/: channel_test.cpp  channels.h  context_pool.h  depth_first_search.h  endpoints.h  flags.h  kernel.cpp  kernel.h  linker.h  message_utils.h  meta.cpp  meta.h  module.h  module_tags.h  module_test.cpp  ring_buffer.h  static_vector.h  task.h  type_info.h
soccer/frontend/framework/serialize/: serializer.cpp  serializer.h
soccer/frontend/framework/thread/: simplethreadmanager.h  task.h  tasktest.cpp  threadmanager.h  threadtest.cpp  util.cpp  util.h
soccer/frontend/framework/util/: assert.cpp  assert.h  buildinfo.hpp  clock.cpp  clock.h  clock_simulator.h  configparser.cpp  configparser.h  converter.h  filesystem.h  frame.h  getenv.cpp  getenv.h  niceness.h  stacktrace.h
soccer/frontend/modules/: CMakeLists.txt  robocup.cpp  robocup.h
soccer/frontend/modules/behavior/: behavior.cpp  behavior.h
soccer/frontend/modules/cmake/: behavior.cmake  gamecontrol.cmake  gamestate.cmake  localization.cmake  logevents.cmake  motion.cmake  nao.cmake  refereegesture.cmake  teamcomm.cmake  vision.cmake  whistle.cmake  worldmodel.cmake
soccer/frontend/modules/gamecontrol/: gamecontrol.cpp  gamecontrol.h
soccer/frontend/modules/gamestate/: gamestate.cpp  gamestate.h
soccer/frontend/modules/localization/: hypothesesgenerator.cpp  hypothesesgenerator.h  particlefilter.cpp  particlefilter.h  pose.cpp  pose.h  poseblackboard.cpp  poseblackboard.h
soccer/frontend/modules/logevents/: logevents.cpp  logevents.h
soccer/frontend/modules/motion/: motion.cpp  motion.h
soccer/frontend/modules/nao/: nao.cpp  nao.h  naostate.h
soccer/frontend/modules/refereegesture/: refereegesture.cpp  refereegesture.h
soccer/frontend/modules/teamcomm/: teamcomm.cpp  teamcomm.h
soccer/frontend/modules/vision/: vision.cpp  vision.h
soccer/frontend/modules/whistle/: commands.h  whistle.cpp  whistle.h
soccer/frontend/modules/worldmodel/: ballfilter.cpp  ballfilter.h  ballmotionfilter.cpp  ballmotionfilter.h  teamball.cpp  teamball.h  worldmodel.cpp  worldmodel.h
soccer/frontend/representations/: CMakeLists.txt
soccer/frontend/representations/bembelbots/: constants.h  feature_flags.h  nao_info.cpp  nao_info.h  thread.h  types.h
soccer/frontend/representations/blackboards/: camera_calibration.cpp  camera_calibration.h  camera_parameters.cpp  camera_parameters.h  gamecontrol.cpp  gamecontrol.h  settings.cpp  settings.h  vision.cpp  vision.h  worldmodel.cpp  worldmodel.h
soccer/frontend/representations/camera/: cam_pose_struct.h  camera.h  image_provider.h
soccer/frontend/representations/debugserver/: debugstate.h
soccer/frontend/representations/flatbuffers/: flatbuffers.h  vision_results.fbs
soccer/frontend/representations/gamecontrol/: gamecontrol_message.h
soccer/frontend/representations/localization/: locamessage.h
soccer/frontend/representations/motion/: body_commands.h  body_state.h  motion.h
soccer/frontend/representations/nao/: commands.h
soccer/frontend/representations/playingfield/: playingfield.cpp  playingfield.h  playingfield_debug.cpp  playingfield_painter.cpp  playingfield_painter.h
soccer/frontend/representations/serialize/: eigen.h
soccer/frontend/representations/spl/: spl.h
soccer/frontend/representations/teamcomm/: commands.h  teammessage.h  types.h
soccer/frontend/representations/vision/: detect.h  image.h  visioncontext.h  visiondefinitions.h
soccer/frontend/representations/whistle/: commands.h  whistleresult.h
soccer/frontend/src/: CMakeLists.txt  config.cpp  config.h  main.cpp  system.cpp  system.h  threadconfig.cpp
(+450 files in other folders)
