add_executable(tripple_buffer_test EXCLUDE_FROM_ALL "tripple_buffer_test.cpp")
target_link_libraries(tripple_buffer_test
    ${BOOST_FILESYSTEM_LIBRARIES}
    ${BOOST_PROGRAM_OPTIONS_LIBRARIES}
    ${BOOST_INTERPROCESS_LIBRARIES}
    ${BOOST_DATE_TIME_LIBRARIES}
    ${BOOST_SYSTEM_LIBRARIES}
    ${BOOST_THREAD_LIBRARIES}
    ${BOOST_CHRONO_LIBRARIES}
    ${BOOST_SIGNALS_LIBRARIES}
    ${BOOST_REGEX_LIBRARIES}
    ${BOOST_LOCALE_LIBRARIES}
)

add_executable(js_shm_test EXCLUDE_FROM_ALL "js_shm_test.cpp")
target_link_libraries(js_shm_test
    ${BOOST_FILESYSTEM_LIBRARIES}
    ${BOOST_PROGRAM_OPTIONS_LIBRARIES}
    ${BOOST_INTERPROCESS_LIBRARIES}
    ${BOOST_DATE_TIME_LIBRARIES}
    ${BOOST_SYSTEM_LIBRARIES}
    ${BOOST_THREAD_LIBRARIES}
    ${BOOST_CHRONO_LIBRARIES}
    ${BOOST_SIGNALS_LIBRARIES}
    ${BOOST_REGEX_LIBRARIES}
    ${BOOST_LOCALE_LIBRARIES}
)

add_executable(boost_queue_test EXCLUDE_FROM_ALL "boost_queue_test.cpp")
target_link_libraries(boost_queue_test
    ${BOOST_FILESYSTEM_LIBRARIES}
    ${BOOST_PROGRAM_OPTIONS_LIBRARIES}
    ${BOOST_INTERPROCESS_LIBRARIES}
    ${BOOST_DATE_TIME_LIBRARIES}
    ${BOOST_SYSTEM_LIBRARIES}
    ${BOOST_THREAD_LIBRARIES}
    ${BOOST_CHRONO_LIBRARIES}
    ${BOOST_SIGNALS_LIBRARIES}
    ${BOOST_REGEX_LIBRARIES}
    ${BOOST_LOCALE_LIBRARIES}
)
